Thu Aug 14 11:08:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Reword copyright notices to include the latest
	year, to refer to "other authors" in addition to the ones listed,
	and to be more concisely formatted.

Wed Aug 13 13:50:00 1997  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh: Replace hard-coded directory with ${TESTDIR}, add
	join3 to default tests

Wed Aug 13 11:42:24 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcscmds.c: Adjust comment to reflect progress on removing RCS
	execs outside this file.

Mon Aug 11 10:14:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* vers_ts.c (Version_TS): If vers_ts->vn_rcs == NULL, skip setting
	modification time in server case as well as local case.
	* server.c (server_modtime): Add assertion to clarify that caller
	must assure that vers_ts->vn_rcs != NULL.
	* sanity.sh (join3): Add file "file2" to test for above fix.

	* modules.c (save_d): When parsing -s option, don't assume that
	we will hit a space before we hit the '\0'.
	(struct sortrec): Document allocation policies (status quo except
	status field is now malloc'd).
	(cat_module): No longer need to set the '\0' at the end of the
	status field back to ' ', as it no longer shares storage with the
	rest field.
	* sanity.sh (modules): Add "statusmod" to test for above fix.

Sun Aug 10 12:18:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Remove TODO item about more keyword expansion tests.
	The keyword test and others cover it pretty well, and such an item
	isn't useful unless it is specific.

	* sanity.sh (importb): New tests test "cvs import -b".

	* mkmodules.c: Update comment with more reasons why having
	CVSROOT/passwd be a regular administrative file would be a Bad
	Idea.

	* server.c (switch_to_user): Add comment about checking for errors
	from setuid and friends.

Wed Aug  6 13:48:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Add comment about errors writing CVS/Root in